syntax = "proto3";

package posts;

option go_package = "posts_service/pkg/pb";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message CreatePostRequest {
  string content = 1;
  int64 userId = 2;
}

message UpdatePostRequest {
  int64 postId = 1;
  string content = 2;
  int64 userId = 3;
}

message DeletePostRequest {
  int64 postId = 1;
  int64 userId = 2;
}

message GetPostRequest {
  int64 postId = 1;
}

message ListPostsRequest {
  int64 userId = 1;
  int64 page = 2;
  int64 pageSize = 3;
}

message PostResponse {
  int64 postId = 1;
  string content = 2;
  int64 userId = 3;
}

message DeletePostResponse {
  int64 postId = 1;
  bool success = 2;
}

message ListPostsResponse {
  repeated PostResponse posts = 1;
  int64 totalPosts = 2;
}